--- a/Topicos/Algelin/produto-escalar-vetor.ipynb
+++ b/Topicos/Algelin/produto-escalar-vetor.ipynb
@@ -48,6 +48,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "###Exemplo de implementação em Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "y = a*x ,\n",
+    "\n",
+    "em que \"a\" é um escalar (float, por exemplo) e \"x\" é um numpy array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = 3.0\n",
+    "x = np.array([[5.],[6.],[7.]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y = a*x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 15.]\n",
+      " [ 18.]\n",
+      " [ 21.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print y"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
