--- a/Topicos/Algelin/produto-matriz-vetor.ipynb
+++ b/Topicos/Algelin/produto-matriz-vetor.ipynb
@@ -114,6 +114,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "###Exemplo de implementação em Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`y = A.dot(x)` ,\n",
+    "\n",
+    "em que A e x são arrays do numpy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "A = np.array([[1.,2.],\n",
+    "              [3.,4.],\n",
+    "              [5.,6.]])\n",
+    "x = np.array([[7.],\n",
+    "              [8.]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y = A.dot(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 23.]\n",
+      " [ 53.]\n",
+      " [ 83.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print y"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
