--- a/Topicos/Algelin/produtos-entre-vetores.ipynb
+++ b/Topicos/Algelin/produtos-entre-vetores.ipynb
@@ -202,6 +202,143 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "###Exemplo de implementação em Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Produto elemento-a-elemento**\n",
+    "\n",
+    "`z = x*y` ,\n",
+    "\n",
+    "em que z, x e y são arrays do numpy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = np.array([[2.],\n",
+    "              [4.],\n",
+    "              [6.]])\n",
+    "\n",
+    "y = np.array([[3.],\n",
+    "              [2.],\n",
+    "              [1.]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "z = x*y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 6.]\n",
+      " [ 8.]\n",
+      " [ 6.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Produto direto**\n",
+    "\n",
+    "`M = x*y.T` ,\n",
+    "\n",
+    "em que M, x e y são arrays do numpy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = np.array([[1.],\n",
+    "              [2.],\n",
+    "              [3.]])\n",
+    "y = np.array([4.,5.])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "M = x*y.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  4.   5.]\n",
+      " [  8.  10.]\n",
+      " [ 12.  15.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print M"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
