modifica o texto da implementacao utilizada para validacao

--- a/Topicos/template-codigo.ipynb
+++ b/Topicos/template-codigo.ipynb
@@ -161,18 +161,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Resultado da função Python"
+    "###Resultado proveniente de outra implementação"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#Resultado de uma implementação própria do Python."
+    "#Resultado proveniente de uma implementação independente, que pode ser feita em Python, por exemplo."
    ]
   },
   {
