utiliza duplo cifrao para tentar solucionar um problema de latex

--- a/Topicos/Algelin/produto-matriz-vetor.ipynb
+++ b/Topicos/Algelin/produto-matriz-vetor.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "    \\mathbf{A} \n",
     "    & = \\left[\n",
     "    \\begin{array}{ccc}\n",
@@ -41,7 +41,7 @@
     "        \\mathbf{c}_{M}\n",
     "    \\end{array}\n",
     "    \\right] \\: , \\\\\n",
-    "\\end{align}$"
+    "\\end{align}$$"
    ]
   },
   {
@@ -98,6 +98,22 @@
     "\n",
     "----"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A partição por linhas mostra que o elemento $y_{i}$ do vetor $\\mathbf{y}$ é o produto escalar entre a linha $\\mathbf{r}_{i}^{\\top}$, $i, ..., N$, da matriz $\\mathbf{A}$ e o vetor $\\mathbf{x}$. Já a partição por colunas mostra que o vetor $\\mathbf{y}$ é a combinação linear das colunas $\\mathbf{c}_{j}$, $j = 1, ..., M$, de $\\mathbf{A}$. Neste caso, os elementos de $\\mathbf{x}$ são os coeficientes da combinação linear."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
