produto entre matrizes e modificacoes em outro notebook para compatibilizar notacao

--- a/Topicos/Algelin/produto-matriz-matriz.ipynb
+++ b/Topicos/Algelin/produto-matriz-matriz.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "    \\mathbf{A} \n",
     "    & = \\left[\n",
     "    \\begin{array}{ccc}\n",
@@ -41,14 +41,14 @@
     "        \\mathbf{A}(:,M)\n",
     "    \\end{array}\n",
     "    \\right] \\: , \\\\\n",
-    "\\end{align}$"
+    "\\end{align}$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "em que $\\mathbf{A}(i,:)$, $i = 1, ..., N$, é o vetor $1 \\times M$ que representa a $i$-ésima linha de $\\mathbf{A}$ e $\\mathbf{A}(:,j)$, $j = 1, ..., M$, é o vetor $N \\times 1$ que representa a $j$-ésima coluna de $\\mathbf{A}$. analogamente para a matriz $\\mathbf{B}$."
+    "em que $\\mathbf{A}(i,:)$, $i = 1, ..., N$, é o vetor $1 \\times M$ que representa a $i$-ésima linha de $\\mathbf{A}$ e $\\mathbf{A}(:,j)$, $j = 1, ..., M$, é o vetor $N \\times 1$ que representa a $j$-ésima coluna de $\\mathbf{A}$. Analogamente para a matriz $\\mathbf{B}$."
    ]
   },
   {
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "----\n",
+    "-----\n",
     "$\\mathbf{C} = \\mathbf{0}$\n",
     "\n",
     "for $i = 1:N$\n",
@@ -77,36 +77,6 @@
     "\n",
     ">end\n",
     "\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note que $i$ percorre as linhas de $\\mathbf{A}$, $j$ percorre as colunas de $\\mathbf{B}$ e $k$ está relacionado ao produto escalar entre $\\mathbf{A}(i,:)$ e $\\mathbf{B}(:,j)$.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----\n",
-    "*Usando a partição por linhas*\n",
-    "\n",
-    "for $i = 1:N$\n",
-    "\n",
-    "$\\quad \\quad y_{i} = \\mathbf{r}_{i}^{\\top} \\mathbf{x}$\n",
-    "    \n",
     "end\n",
     "\n",
     "-----"
@@ -116,7 +86,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ou"
+    "Note que o loop $i$ percorre as linhas de $\\mathbf{A}$, o loop $j$ percorre as colunas de $\\mathbf{B}$ e o loop $k$ está relacionado ao produto escalar entre $\\mathbf{A}(i,:)$ e $\\mathbf{B}(:,j)$. Há outras três maneiras distintas de escrever o produto $\\mathbf{C} = \\mathbf{A} \\mathbf{B}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Formulação baseada no produto escalar**\n",
+    "\n",
+    "Esta formulação consiste em representar o loop k como um produto escalar entre $\\mathbf{A}(i,:)$ e $\\mathbf{B}(:,j)$."
    ]
   },
   {
@@ -124,17 +103,45 @@
    "metadata": {},
    "source": [
     "----\n",
-    "*Usando a partição por colunas*\n",
+    "for $i = 1:N$\n",
     "\n",
-    "$\\mathbf{y} = \\mathbf{0}$\n",
+    ">for $j = 1:L$ \n",
     "\n",
-    "for $j = 1:M$\n",
+    ">>$c_{ij} = \\mathbf{A}(i,:) \\, \\mathbf{B}(:,j)$\n",
     "\n",
-    "$\\quad \\quad \\mathbf{y} = \\mathbf{y} + x_{j} \\mathbf{c}_{j}$\n",
-    "    \n",
+    ">end\n",
+    "\n",
     "end\n",
     "\n",
-    "----"
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note que o loop $j$ percorre os elementos da $i$-ésima linha da matriz $\\mathbf{C}$. Se particionarmos a matriz $\\mathbf{C}$ em linhas, é possível suprimir o loop $j$:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "for $i = 1:N$\n",
+    "\n",
+    ">$\\mathbf{C}(i,:) = \\mathbf{A}(i,:) \\, \\mathbf{B}$\n",
+    "\n",
+    "end\n",
+    "\n",
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Formulação baseada na combinação linear de colunas**"
    ]
   },
   {
@@ -148,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Implemente o produto $\\mathbf{A} \\mathbf{x}$ utilizando a partição por linhas e a partição por colunas. **Cada implementação deve estar em uma função diferente**. Ambas as implementações devem, **obrigatoriamente**, utilizar as funções desenvolvidas previamente para o cáculo de produtos entre vetores. **As implementações devem seguir o template da disciplina**."
+    "bla bla bla"
    ]
   },
   {
