--- a/Topicos/Algelin/produtos-entre-vetores.ipynb
+++ b/Topicos/Algelin/produtos-entre-vetores.ipynb
@@ -18,14 +18,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\mathbf{v} = \\left[\n",
+    "$$\\mathbf{v} = \\left[\n",
     "\\begin{array}{c}\n",
     "v_{1} \\\\\n",
     "v_{2} \\\\\n",
     "\\vdots \\\\\n",
     "v_{N}\n",
     "\\end{array}\n",
-    "\\right]_{N \\times 1}$"
+    "\\right]_{N \\times 1}$$"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\mathbf{z}\n",
+    "$$\\mathbf{z}\n",
     "= \\left[\n",
     "\\begin{array}{c}\n",
     "x_{1} \\, y_{1} \\\\\n",
@@ -54,7 +54,7 @@
     "\\vdots \\\\\n",
     "x_{N} \\, y_{N}\n",
     "\\end{array}\n",
-    "\\right]_{N \\times 1}$"
+    "\\right]_{N \\times 1}$$"
    ]
   },
   {
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "\\mathbf{M} & = \\mathbf{x} \\otimes \\mathbf{y}^{\\top} \\\\\n",
     "           & = \\left[\n",
     "                \\begin{array}{c}\n",
@@ -85,7 +85,7 @@
     "                x_{N} \\, \\mathbf{y}^{\\top}\n",
     "                \\end{array}\n",
     "                \\right]_{N \\times N}\n",
-    "\\end{align}$"
+    "\\end{align}$$"
    ]
   },
   {
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "    \\mathbf{M} \n",
     "    & = \\left[\n",
     "    \\begin{array}{ccc}\n",
@@ -129,7 +129,7 @@
     "        \\mathbf{c}_{M}\n",
     "    \\end{array}\n",
     "    \\right] \\: , \\\\\n",
-    "\\end{align}$"
+    "\\end{align}$$"
    ]
   },
   {
