referencia de Horn e Johnson e substituicao do begin align por begin split

--- a/Topicos/Algelin/produto-escalar-vetor.ipynb
+++ b/Topicos/Algelin/produto-escalar-vetor.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\begin{align}\n",
+    "$$\\begin{align}\n",
     "\\mathbf{y} & = a \\, \\mathbf{x}\\\\\n",
     "           & = \\left[\n",
     "                \\begin{array}{c}\n",
@@ -28,7 +28,7 @@
     "                a \\, x_{N}\n",
     "                \\end{array}\n",
     "                \\right]_{N \\times 1}\n",
-    "\\end{align}$"
+    "\\end{align}$$"
    ]
   },
   {
