--- a/Topicos/Algelin/produto-escalar.ipynb
+++ b/Topicos/Algelin/produto-escalar.ipynb
@@ -18,14 +18,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\mathbf{v} = \\left[\n",
+    "$$\\mathbf{v} = \\left[\n",
     "\\begin{array}{c}\n",
     "v_{1} \\\\\n",
     "v_{2} \\\\\n",
     "\\vdots \\\\\n",
     "v_{N}\n",
     "\\end{array}\n",
-    "\\right]_{N \\times 1}$"
+    "\\right]_{N \\times 1}$$"
    ]
   },
   {
@@ -39,10 +39,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\begin{align}\n",
+    "$$\\begin{split}\n",
     "c & = \\mathbf{x}^{\\top}\\mathbf{y} \\\\\n",
     "  & = \\sum^{N}_{i=1} x_{i} \\, y_{i}\n",
-    "\\end{align}$"
+    "\\end{split}$$"
    ]
   },
   {
