--- a/Topicos/Algelin/produto-matriz-vetor.ipynb
+++ b/Topicos/Algelin/produto-matriz-vetor.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\begin{align}\n",
+    "$$\\begin{split}\n",
     "    \\mathbf{A} \n",
     "    & = \\left[\n",
     "    \\begin{array}{ccc}\n",
@@ -41,7 +41,7 @@
     "        \\mathbf{c}_{M}\n",
     "    \\end{array}\n",
     "    \\right] \\: , \\\\\n",
-    "\\end{align}$$"
+    "\\end{split}$$"
    ]
   },
   {
