--- a/Topicos/Algelin/produtos-entre-vetores.ipynb
+++ b/Topicos/Algelin/produtos-entre-vetores.ipynb
@@ -39,22 +39,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Produto elemento-a-elemento**"
+    "**Produto elemento-a-elemento (ou produto de Hadamard)**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\mathbf{z}\n",
-    "= \\left[\n",
+    "$$\\begin{split}\n",
+    "\\mathbf{z} \n",
+    "& = \\mathbf{x} \\circ \\mathbf{y} \\\\\n",
+    "& = \\left[\n",
     "\\begin{array}{c}\n",
     "x_{1} \\, y_{1} \\\\\n",
     "x_{2} \\, y_{2}\\\\\n",
     "\\vdots \\\\\n",
     "x_{N} \\, y_{N}\n",
     "\\end{array}\n",
-    "\\right]_{N \\times 1}$$"
+    "\\right]_{N \\times 1}\n",
+    "\\end{split}$$"
    ]
   },
   {
@@ -68,14 +71,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Produto direto**"
+    "Para mais informações:\n",
+    "\n",
+    "* Horn e Johnson (1994), Capítulo 5"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\begin{align}\n",
+    "**Produto direto (ou produto de Kronecker)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\begin{split}\n",
     "\\mathbf{M} & = \\mathbf{x} \\otimes \\mathbf{y}^{\\top} \\\\\n",
     "           & = \\left[\n",
     "                \\begin{array}{c}\n",
@@ -85,14 +97,25 @@
     "                x_{N} \\, \\mathbf{y}^{\\top}\n",
     "                \\end{array}\n",
     "                \\right]_{N \\times N}\n",
-    "\\end{align}$$"
+    "\\end{split}$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note que, neste caso, o resultado é uma matriz quadrada de ordem $N$ igual ao número de elementos dos vetores $\\mathbf{x}$ e $\\mathbf{y}$. Contudo, os vetores $\\mathbf{x}$ e $\\mathbf{y}$ NÃO precisam ter o mesmo número de elementos. Considere, por exemplo, que o vetor $\\mathbf{x}$ é $N \\times 1$ e o vetor $\\mathbf{y}$ é $M \\times 1$, em que $N \\neq M$. Neste caso, a matriz $\\mathbf{M}$ é $N \\times M$ e NÃO é quadrada. Para mais informações sobre o produto direto, acesse http://mathworld.wolfram.com/VectorDirectProduct.html."
+    "Note que, neste caso, o resultado é uma matriz quadrada de ordem $N$ igual ao número de elementos dos vetores $\\mathbf{x}$ e $\\mathbf{y}$. Contudo, os vetores $\\mathbf{x}$ e $\\mathbf{y}$ NÃO precisam ter o mesmo número de elementos. Considere, por exemplo, que o vetor $\\mathbf{x}$ é $N \\times 1$ e o vetor $\\mathbf{y}$ é $M \\times 1$, em que $N \\neq M$. Neste caso, a matriz $\\mathbf{M}$ é $N \\times M$ e NÃO é quadrada. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para mais informações:\n",
+    "\n",
+    "* http://mathworld.wolfram.com/VectorDirectProduct.html\n",
+    "\n",
+    "* Horn e Johnson (1994), Capítulo 4, Seção 4.2"
    ]
   },
   {
@@ -106,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\begin{align}\n",
+    "$$\\begin{split}\n",
     "    \\mathbf{M} \n",
     "    & = \\left[\n",
     "    \\begin{array}{ccc}\n",
@@ -129,7 +152,7 @@
     "        \\mathbf{c}_{M}\n",
     "    \\end{array}\n",
     "    \\right] \\: , \\\\\n",
-    "\\end{align}$$"
+    "\\end{split}$$"
    ]
   },
   {
