produto matriz-matriz

--- a/Topicos/Algelin/produto-escalar.ipynb
+++ b/Topicos/Algelin/produto-escalar.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O Produto escalar entre estes vetores pode ser definido como:"
+    "O produto escalar entre estes vetores pode ser definido como:"
    ]
   },
   {
