--- a/Topicos/Algelin/produto-matriz-matriz.ipynb
+++ b/Topicos/Algelin/produto-matriz-matriz.ipynb
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "em que $\\mathbf{A}(i,:)$, $i = 1, ..., N$, é o vetor $1 \\times M$ que representa a $i$-ésima linha de $\\mathbf{A}$ e $\\mathbf{A}(:,j)$, $j = 1, ..., M$, é o vetor $N \\times 1$ que representa a $j$-ésima coluna de $\\mathbf{A}$. Analogamente para a matriz $\\mathbf{B}$."
+    "em que $\\mathbf{A}(i,:)$, $i = 1, ..., N$, é o vetor $1 \\times M$ que representa a $i$-ésima linha de $\\mathbf{A}$ e $\\mathbf{A}(:,j)$, $j = 1, ..., M$, é o vetor $N \\times 1$ que representa a $j$-ésima coluna de $\\mathbf{A}$. Analogamente, $\\mathbf{B}(i,:)$, $i = 1, ..., M$, é o vetor $1 \\times L$ que representa a $i$-ésima linha de $\\mathbf{B}$ e $\\mathbf{B}(:,j)$, $j = 1, ..., L$, é o vetor $M \\times 1$ que representa a $j$-ésima coluna de $\\mathbf{B}$."
    ]
   },
   {
@@ -95,7 +95,7 @@
    "source": [
     "**Formulação baseada no produto escalar**\n",
     "\n",
-    "Esta formulação consiste em representar o loop k como um produto escalar entre $\\mathbf{A}(i,:)$ e $\\mathbf{B}(:,j)$."
+    "Esta formulação consiste em representar cada elemento $\\mathbf{C}(i,j)$, $i = 1, ..., N$, $j = 1, ..., L$, pelo produto escalar entre $\\mathbf{A}(i,:)$ e $\\mathbf{B}(:,j)$. Este produto escalar é representado pelo loop $k$."
    ]
   },
   {
@@ -114,6 +114,13 @@
     "end\n",
     "\n",
     "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color='red'>Atenção: $\\mathbf{A}(i,:) \\, \\mathbf{B}(:,j)$ indica o produto escalar entre o vetor $\\mathbf{A}(i,:)$, que é $1 \\times M$, e o vetor $\\mathbf{B}(:,j)$, que é $M \\times 1$. Portanto, $c_{ij}$ é um escalar.</font>"
    ]
   },
   {
@@ -141,7 +148,109 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Formulação baseada na combinação linear de colunas**"
+    "<font color='red'>Atenção: $\\mathbf{A}(i,:) \\, \\mathbf{B}$ indica o produto entre o vetor $\\mathbf{A}(i,:)$, que é $1 \\times M$, pela matriz $\\mathbf{B}$, que é $M \\times L$. Portanto, $\\mathbf{C}(i,:)$ é um vetor $1 \\times L$.</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Formulação baseada na combinação linear de colunas**\n",
+    "\n",
+    "Esta formulação consiste em representar cada coluna $\\mathbf{C}(:,j)$, $j = 1, ..., L$, pela combinação linear das colunas de $\\mathbf{A}$. Para tanto, vamos rearranjar a ordem dos loops $i$, $j$ e $k$, tal como mostrado abaixo:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----\n",
+    "$\\mathbf{C} = \\mathbf{0}$\n",
+    "\n",
+    "for $j = 1:L$ \n",
+    "\n",
+    ">for $k = 1:M$\n",
+    "\n",
+    ">>for $i = 1:N$\n",
+    "\n",
+    ">>>$c_{ij} = c_{ij} + a_{ik} \\, b_{kj}$\n",
+    "\n",
+    ">>end\n",
+    "\n",
+    ">end\n",
+    "\n",
+    "end\n",
+    "\n",
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note que o loop $i$ representa a multiplicação da coluna $\\mathbf{A}(:,k)$ pelo elemento $\\mathbf{B}(k,j)$. Este loop pode ser suprimido da seguinte forma:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----\n",
+    "$\\mathbf{C} = \\mathbf{0}$\n",
+    "\n",
+    "for $j = 1:L$ \n",
+    "\n",
+    ">for $k = 1:M$\n",
+    "\n",
+    ">>$\\mathbf{C}(:,j) = \\mathbf{C}(:,j) + \\mathbf{A}(:,k) \\, \\mathbf{B}(k,j)$\n",
+    "\n",
+    ">end\n",
+    "\n",
+    "end\n",
+    "\n",
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color='red'>Atenção: $\\mathbf{A}(:,k) \\, \\mathbf{B}(k,j)$ indica o produto entre o vetor $\\mathbf{A}(:,k)$, que é $N \\times 1$, pelo elemento $\\mathbf{B}(k,j)$, que é um escalar. Portanto, $\\mathbf{C}(:,j)$ é um vetor $N \\times 1$.</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por fim, note que o loop $k$ representa o produto entre $\\mathbf{A}$ e as colunas $\\mathbf{B}(:,j)$, tal que:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----\n",
+    "for $j = 1:L$ \n",
+    "\n",
+    ">$\\mathbf{C}(:,j) = \\mathbf{A} \\, \\mathbf{B}(:,j)$\n",
+    "\n",
+    "end\n",
+    "\n",
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color='red'>Atenção: $\\mathbf{A} \\, \\mathbf{B}(:,j)$ indica o produto entre a matriz $\\mathbf{A}$, que é $N \\times M$, pelo vetor $\\mathbf{B}(:,j)$, que é $M \\times 1$. Portanto, $\\mathbf{C}(:,j)$ é um vetor $N \\times 1$.</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Formulação baseada no blau**"
    ]
   },
   {
