diferentes formulacoes para o produto entre matrizes

--- a/Topicos/Algelin/produto-matriz-matriz.ipynb
+++ b/Topicos/Algelin/produto-matriz-matriz.ipynb
@@ -52,9 +52,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Formulação baseada no encadeamento de três laços**\n",
+    "\n",
     "A maneira mais simples de escrever o produto $\\mathbf{C} = \\mathbf{A} \\mathbf{B}$ é dada por:"
    ]
   },
@@ -90,6 +101,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -120,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='red'>Atenção: $\\mathbf{A}(i,:) \\, \\mathbf{B}(:,j)$ indica o produto escalar entre o vetor $\\mathbf{A}(i,:)$, que é $1 \\times M$, e o vetor $\\mathbf{B}(:,j)$, que é $M \\times 1$. Portanto, $c_{ij}$ é um escalar.</font>"
+    "**ATENÇÃO:** $\\mathbf{A}(i,:) \\, \\mathbf{B}(:,j)$ indica o produto escalar entre o vetor $\\mathbf{A}(i,:)$, que é $1 \\times M$, e o vetor $\\mathbf{B}(:,j)$, que é $M \\times 1$. Portanto, $c_{ij}$ é um escalar."
    ]
   },
   {
@@ -148,8 +168,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='red'>Atenção: $\\mathbf{A}(i,:) \\, \\mathbf{B}$ indica o produto entre o vetor $\\mathbf{A}(i,:)$, que é $1 \\times M$, pela matriz $\\mathbf{B}$, que é $M \\times L$. Portanto, $\\mathbf{C}(i,:)$ é um vetor $1 \\times L$.</font>"
+    "**ATENÇÃO:** $\\mathbf{A}(i,:) \\, \\mathbf{B}$ indica o produto entre o vetor $\\mathbf{A}(i,:)$, que é $1 \\times M$, pela matriz $\\mathbf{B}$, que é $M \\times L$. Portanto, $\\mathbf{C}(i,:)$ é um vetor $1 \\times L$."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -157,7 +186,7 @@
    "source": [
     "**Formulação baseada na combinação linear de colunas**\n",
     "\n",
-    "Esta formulação consiste em representar cada coluna $\\mathbf{C}(:,j)$, $j = 1, ..., L$, pela combinação linear das colunas de $\\mathbf{A}$. Para tanto, vamos rearranjar a ordem dos loops $i$, $j$ e $k$, tal como mostrado abaixo:"
+    "Esta formulação consiste em representar cada coluna $\\mathbf{C}(:,j)$, $j = 1, ..., L$, pela combinação linear das colunas de $\\mathbf{A}$. Para tanto, vamos rearranjar a ordem dos loops $i$, $j$ e $k$ da \"Formulação baseada no encadeamento de três laços\", tal como mostrado abaixo:"
    ]
   },
   {
@@ -215,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='red'>Atenção: $\\mathbf{A}(:,k) \\, \\mathbf{B}(k,j)$ indica o produto entre o vetor $\\mathbf{A}(:,k)$, que é $N \\times 1$, pelo elemento $\\mathbf{B}(k,j)$, que é um escalar. Portanto, $\\mathbf{C}(:,j)$ é um vetor $N \\times 1$.</font>"
+    "**ATENÇÃO:** $\\mathbf{A}(:,k) \\, \\mathbf{B}(k,j)$ indica o produto entre o vetor $\\mathbf{A}(:,k)$, que é $N \\times 1$, pelo elemento $\\mathbf{B}(k,j)$, que é um escalar. Portanto, $\\mathbf{C}(:,j)$ é um vetor $N \\times 1$."
    ]
   },
   {
@@ -243,15 +272,123 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='red'>Atenção: $\\mathbf{A} \\, \\mathbf{B}(:,j)$ indica o produto entre a matriz $\\mathbf{A}$, que é $N \\times M$, pelo vetor $\\mathbf{B}(:,j)$, que é $M \\times 1$. Portanto, $\\mathbf{C}(:,j)$ é um vetor $N \\times 1$.</font>"
+    "**ATENÇÃO:** $\\mathbf{A} \\, \\mathbf{B}(:,j)$ indica o produto entre a matriz $\\mathbf{A}$, que é $N \\times M$, pelo vetor $\\mathbf{B}(:,j)$, que é $M \\times 1$. Portanto, $\\mathbf{C}(:,j)$ é um vetor $N \\times 1$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Formulação baseada no produto direto**\n",
+    "\n",
+    "Esta formaulação consiste em representar a matriz $\\mathbf{C}$ como uma soma de matrizes definidas pelo produto direto entre as colunas $\\mathbf{A}(:,k)$ e as linhas $\\mathbf{B}(k,:)$, $k = 1, ..., M$. Para tanto, vamos rearranjar a ordem dos loops $i$, $j$ e $k$ da \"Formulação baseada no encadeamento de três laços\", tal como mostrado abaixo:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Formulação baseada no blau**"
+    "-----\n",
+    "$\\mathbf{C} = \\mathbf{0}$\n",
+    "\n",
+    "for $k = 1:M$\n",
+    "\n",
+    ">for $j = 1:L$\n",
+    "\n",
+    ">>for $i = 1:N$ \n",
+    "\n",
+    ">>>$c_{ij} = c_{ij} + a_{ik} \\, b_{kj}$\n",
+    "\n",
+    ">>end\n",
+    "\n",
+    ">end\n",
+    "\n",
+    "end\n",
+    "\n",
+    "-----"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note que, tal como mostrado na \"Formulação baseada na combinação linear de colunas\", o loop $i$ representa a multiplicação da coluna $\\mathbf{A}(:,k)$ pelo elemento $\\mathbf{B}(k,j)$ e, portanto, o loop $i$ ser suprimido da seguinte forma:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----\n",
+    "$\\mathbf{C} = \\mathbf{0}$\n",
+    "\n",
+    "for $k = 1:M$\n",
+    "\n",
+    ">for $j = 1:L$\n",
+    "\n",
+    ">>$\\mathbf{C}(:,j) = \\mathbf{C}(:,j) + \\mathbf{A}(:,k) \\, \\mathbf{B}(k,j)$\n",
+    "\n",
+    ">end\n",
+    "\n",
+    "end\n",
+    "\n",
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ATENÇÃO:** $\\mathbf{A}(:,k) \\, \\mathbf{B}(k,j)$ indica o produto entre o vetor $\\mathbf{A}(:,k)$, que é $N \\times 1$, pelo elemento $\\mathbf{B}(k,j)$, que é um escalar. Portanto, $\\mathbf{C}(:,j)$ é um vetor $N \\times 1$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por fim, note que o loop $j$ representa o produto direto entre $\\mathbf{A}(:,k)$ e $\\mathbf{B}(k,:)$, tal que:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----\n",
+    "$\\mathbf{C} = \\mathbf{0}$\n",
+    "\n",
+    "for $k = 1:M$\n",
+    "\n",
+    ">$\\mathbf{C} = \\mathbf{C} + \\mathbf{A}(:,k) \\, \\mathbf{B}(k,:)$\n",
+    "\n",
+    "end\n",
+    "\n",
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ATENÇÃO:** $\\mathbf{A}(:,k) \\, \\mathbf{B}(k,:)$ indica o produto direto entre o vetor $\\mathbf{A}(:,k)$, que é $N \\times 1$, e o vetor $\\mathbf{B}(k,:)$, que é $1 \\times L$. Portanto, $\\mathbf{C}$ é uma matriz $N \\times L$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -264,7 +401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "bla bla bla"
+    "Implemente o produto $\\mathbf{A} \\mathbf{B}$ seguindo as quatro formulações diferentes apresentadas acima. **Cada implementação deve estar em uma função diferente**. Todas as implementações, exceto aquela baseada no encadeamento de três laços, devem, **obrigatoriamente**, utilizar as funções desenvolvidas previamente. **As implementações devem seguir o template da disciplina**."
    ]
   },
   {
@@ -291,24 +428,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`y = A.dot(x)` ,\n",
+    "`C = A.dot(B)` ,\n",
     "\n",
-    "em que A e x são arrays do numpy."
+    "em que A e B são arrays do numpy."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "A = np.array([[1.,2.],\n",
     "              [3.,4.],\n",
     "              [5.,6.]])\n",
-    "x = np.array([[7.],\n",
-    "              [8.]])"
+    "B = np.array([[7., 8.],\n",
+    "              [9., 10.]])"
    ]
   },
   {
@@ -319,7 +456,7 @@
    },
    "outputs": [],
    "source": [
-    "y = A.dot(x)"
+    "C = A.dot(B)"
    ]
   },
   {
@@ -333,14 +470,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 23.]\n",
-      " [ 53.]\n",
-      " [ 83.]]\n"
+      "[[  25.   28.]\n",
+      " [  57.   64.]\n",
+      " [  89.  100.]]\n"
      ]
     }
    ],
    "source": [
-    "print y"
+    "print C"
    ]
   },
   {
