correcao no texto

--- a/Topicos/Algelin/produto-matriz-matriz.ipynb
+++ b/Topicos/Algelin/produto-matriz-matriz.ipynb
@@ -321,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note que, tal como mostrado na \"Formulação baseada na combinação linear de colunas\", o loop $i$ representa a multiplicação da coluna $\\mathbf{A}(:,k)$ pelo elemento $\\mathbf{B}(k,j)$ e, portanto, o loop $i$ ser suprimido da seguinte forma:"
+    "Note que, tal como mostrado na \"Formulação baseada na combinação linear de colunas\", o loop $i$ representa a multiplicação da coluna $\\mathbf{A}(:,k)$ pelo elemento $\\mathbf{B}(k,j)$ e, portanto, o loop $i$ pode ser suprimido da seguinte forma:"
    ]
   },
   {
