modificacoes nos produto escalar vetor e escalar

--- a/Topicos/Algelin/produto-escalar-vetor.ipynb
+++ b/Topicos/Algelin/produto-escalar-vetor.ipynb
@@ -35,25 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Exercício"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "Implemente o produto $a \\, \\mathbf{x}$. **A implementação deve seguir o template da disciplina**."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "###Exemplo de implementação em Python"
+    "###Coisas para importar"
    ]
   },
   {
@@ -71,21 +53,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "y = a*x ,\n",
-    "\n",
-    "em que \"a\" é um escalar (float, por exemplo) e \"x\" é um numpy array."
+    "###Minha função"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A célula abaixo contém um exemplo de função definida no próprio IPython Notebook."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "a = 3.0\n",
-    "x = np.array([[5.],[6.],[7.]])"
+    "def prod_escalar_vetor(a, x):\n",
+    "    \n",
+    "    '''\n",
+    "    Esta funcao calcula o produto escalar entre o\n",
+    "    escalar \"a\" e o vetor \"x\"\n",
+    "    \n",
+    "    input\n",
+    "    \n",
+    "    a: float - escalar\n",
+    "    x: numpy array - vetor\n",
+    "    \n",
+    "    output\n",
+    "    \n",
+    "    y: float - produto escalar entre os \n",
+    "       vetores x e y\n",
+    "    '''\n",
+    "\n",
+    "    y = a*x\n",
+    "    \n",
+    "    return y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Importar minhas funções de um arquivo externo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A célula abaixo mostra um exemplo de como uma função pode ser definida em um arquivo externo. No exemplo abaixo, o arquivo é denominado `minhas_funcoes.py` e está localizado no mesmo diretório deste IPython Notebook. O conteúdo deste arquivo é o código da função `prod_escalar_vetor`, exatamente como mostrado na célula acima."
    ]
   },
   {
@@ -96,7 +115,14 @@
    },
    "outputs": [],
    "source": [
-    "y = a*x"
+    "import minhas_funcoes as mfun"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Input"
    ]
   },
   {
@@ -105,29 +131,64 @@
    "metadata": {
     "collapsed": false
    },
+   "outputs": [],
+   "source": [
+    "a = 4.0\n",
+    "x = np.array([[1.],[2.],[3.]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Resultado da minha função"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 15.]\n",
-      " [ 18.]\n",
-      " [ 21.]]\n"
+      "[[  4.]\n",
+      " [  8.]\n",
+      " [ 12.]]\n"
      ]
     }
    ],
    "source": [
-    "print y"
+    "meu_resultado = prod_escalar_vetor(a,x)\n",
+    "\n",
+    "print meu_resultado"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  4.]\n",
+      " [  8.]\n",
+      " [ 12.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "meu_resultado2 = mfun.prod_escalar_vetor(a,x)\n",
+    "\n",
+    "print meu_resultado2"
+   ]
   }
  ],
  "metadata": {
