correcao na documentacao da funcao prod_escalar_vetor

--- a/Topicos/Algelin/produto-escalar-vetor.ipynb
+++ b/Topicos/Algelin/produto-escalar-vetor.ipynb
@@ -74,7 +74,7 @@
     "def prod_escalar_vetor(a, x):\n",
     "    \n",
     "    '''\n",
-    "    Esta funcao calcula o produto escalar entre o\n",
+    "    Esta funcao calcula o produto entre o\n",
     "    escalar \"a\" e o vetor \"x\"\n",
     "    \n",
     "    input\n",
@@ -84,8 +84,7 @@
     "    \n",
     "    output\n",
     "    \n",
-    "    y: float - produto escalar entre os \n",
-    "       vetores x e y\n",
+    "    y: float - produto entre \"a\" e \"x\" \n",
     "    '''\n",
     "\n",
     "    y = a*x\n",
