correcao no texto dos exercicios sobre while if elif else e for

--- a/Topicos/Nocoes_programacao_Python/nocoes-python3.ipynb
+++ b/Topicos/Nocoes_programacao_Python/nocoes-python3.ipynb
@@ -641,7 +641,7 @@
     "\n",
     "1. Dada uma lista de números, imprima apenas os números ímpares.\n",
     "\n",
-    "2. Dada uma lista de números, imprima apenas aquelas que forem maiores que um valor \"a\" e menores que um valor \"b\".\n",
+    "2. Dada uma lista de números, imprima apenas aqueles que forem maiores que um valor \"a\" e menores que um valor \"b\".\n",
     "\n",
     "3. Seja um caixa eletrônico com \"a\" notas de 100, \"b\" notas de 50, \"c\" notas de 20, \"d\" notas de 10, \"e\" notas de 5 e \"f\" notas de 2. Implemente o algoritmo que retorna um determinado valor x com a menor quantidade de notas possível."
    ]
