descricao do topico nocoes de python

--- a/Topicos/Nocoes_programacao_Python/nocoes_python.ipynb
+++ b/Topicos/Nocoes_programacao_Python/nocoes_python.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Noções de Python 1"
+    "# Noções de Python"
    ]
   },
   {
@@ -782,15 +782,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Observe que a ausência do ponto faz com que a parte fracionária do resultado seja descartada."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -799,12 +792,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.0\n"
+      "5.0\n"
      ]
     }
    ],
    "source": [
-    "print 4**0.5 # exponenciação"
+    "print 11.//2. # divisão cujo resultado é arredondado para baixo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print 2.**2 # exponenciação"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observe que a ausência do ponto faz com que a parte fracionária do resultado seja descartada."
    ]
   },
   {
