--- a/Topicos/Nocoes_programacao_Python/loops_condicionais.ipynb
+++ b/Topicos/Nocoes_programacao_Python/loops_condicionais.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Noções de Python 3"
+    "#while, if, elif, else e for"
    ]
   },
   {
