--- a/Topicos/Nocoes_programacao_Python/numpy_arrays.ipynb
+++ b/Topicos/Nocoes_programacao_Python/numpy_arrays.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Noções de Python 4"
+    "#Numpy arrays"
    ]
   },
   {
@@ -2273,6 +2273,152 @@
     "for j in range(M):\n",
     "    for i in range(N):\n",
     "        print matriz6[i][j]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "**Utilizando o comando `for`:**\n",
+    "\n",
+    "* Como somar dois vetores?\n",
+    "\n",
+    "* Como somar duas matrizes?\n",
+    "\n",
+    "* Como multiplicar um escalar por um vetor?\n",
+    "\n",
+    "* Como multiplicar um escalar por uma matriz?\n",
+    "\n",
+    "* Dada uma matriz, como selecionar apenas a sua `i`-ésima linha?\n",
+    "\n",
+    "* Dada uma matriz, como selecionar apenas a sua `j`-ésima coluna?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Operações matemáticas simples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "A = numpy.reshape(numpy.linspace(1., 9., 9), (3,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  2.,  3.],\n",
+       "       [ 4.,  5.,  6.],\n",
+       "       [ 7.,  8.,  9.]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "B = numpy.ones((3,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  1.,  1.],\n",
+       "       [ 1.,  1.,  1.],\n",
+       "       [ 1.,  1.,  1.]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  2.,   3.,   4.],\n",
+       "       [  5.,   6.,   7.],\n",
+       "       [  8.,   9.,  10.]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A + B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3.,  3.,  3.],\n",
+       "       [ 3.,  3.,  3.],\n",
+       "       [ 3.,  3.,  3.]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3.0*B"
    ]
   },
   {
