--- a/Topicos/Nocoes_programacao_Python/listas.ipynb
+++ b/Topicos/Nocoes_programacao_Python/listas.ipynb
@@ -419,10 +419,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "lista1[2] = 3.0\n",
     "lista3 = [1, 'dois', 3.0, lista1]"
    ]
   },
@@ -436,7 +437,7 @@
     {
      "data": {
       "text/plain": [
-       "[1, 'dois', 3.0, ['Vanderlei', 'Coelho', 2, 'Oliveira', 'Junior']]"
+       "[1, 'dois', 3.0, ['Vanderlei', 'Coelho', 3.0, 'Oliveira', 'Junior']]"
       ]
      },
      "execution_count": 20,
@@ -476,7 +477,7 @@
     {
      "data": {
       "text/plain": [
-       "[1, 3.0, ['Vanderlei', 'Coelho', 2, 'Oliveira', 'Junior']]"
+       "[1, 3.0, ['Vanderlei', 'Coelho', 3.0, 'Oliveira', 'Junior']]"
       ]
      },
      "execution_count": 22,
@@ -516,7 +517,7 @@
     {
      "data": {
       "text/plain": [
-       "[1, 3.0, ['Vanderlei', 'Coelho', 2, 'Oliveira', 'Junior'], 3.0]"
+       "[1, 3.0, ['Vanderlei', 'Coelho', 3.0, 'Oliveira', 'Junior'], 3.0]"
       ]
      },
      "execution_count": 24,
@@ -581,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -589,21 +590,21 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lista3.index(3.0) # índice da primeira ocorrência do elemento 3.0"
+    "lista3.index(1) # índice da primeira ocorrência do elemento 3.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -614,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -625,11 +626,11 @@
        "[1,\n",
        " 3.0,\n",
        " 'elemento novo',\n",
-       " ['Vanderlei', 'Coelho', 2, 'Oliveira', 'Junior'],\n",
+       " ['Vanderlei', 'Coelho', 3.0, 'Oliveira', 'Junior'],\n",
        " 3.0]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
