--- a/Topicos/Nocoes_programacao_Python/loops_condicionais.ipynb
+++ b/Topicos/Nocoes_programacao_Python/loops_condicionais.ipynb
@@ -39,7 +39,8 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -240,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -262,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -315,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -372,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -403,7 +404,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a = 3.0\n",
+    "\n",
+    "if a == 5.0:           #condicao 1\n",
+    "    print 'condicao 1 satisfeita'\n",
+    "    \n",
+    "elif a == 4.0:         #condicao 2\n",
+    "    print 'condicao 2 satisfeita'\n",
+    "    \n",
+    "elif a == 6.0:         #condicao 3\n",
+    "    print 'condicao 3 satisfeita'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -434,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -465,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -503,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -530,6 +551,37 @@
     "    \n",
     "else:\n",
     "    print 'nenhuma condicao satisfeita'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "condicao 1 satisfeita\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 5.0\n",
+    "\n",
+    "if a == 5.0:           #condicao 1\n",
+    "    print 'condicao 1 satisfeita'\n",
+    "    \n",
+    "    if a > 5.0:         #condicao 2\n",
+    "        print 'condicao 2 satisfeita'\n",
+    "    \n",
+    "    if a == 6.0:         #condicao 3\n",
+    "        print 'condicao 3 satisfeita'\n",
+    "\n",
+    "else:\n",
+    "    print 'condicao 3 NAO satisfeita'"
    ]
   },
   {
@@ -575,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -597,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -687,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -716,21 +768,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'i' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-ed81cd343c0b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mi\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'i' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -739,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -770,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -781,7 +832,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -815,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
